# Arthemax

./: .gitignore  ACCESS_INSTRUCTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOWNLOAD_INSTRUCTIONS.md  Dockerfile  LICENSE  README.md  check_servers.sh  flask_server.py  flask_server_2.py  requirements.txt  restart_servers.sh  run.py  run_server.sh  setup.py
config/: default_config.json
docs/: README.md  api_reference.md  architecture.md  development_guide.md  usage_guide.md
nexus_extracted/nexus_1_1/: README.md  pyproject.toml
nexus_extracted/nexus_1_1/src/: main.py
nexus_extracted/nexus_1_1/tests/: __init__.py
src/: __init__.py  data.py  model.py  server.py  trainer.py  web_ui.py
tests/: test_model.py
