[tool.poetry]
name = "nexus-1-1"
version = "0.1.0"
description = "Nexus 1.1 - Advanced Autonomous AI Model"
authors = ["OpenHands <openhands@all-hands.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
torch = "^2.0.0"
transformers = "^4.30.0"
scikit-learn = "^1.2.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"